Bug 332590 - Systray icon is not always updated correctly
Summary: Systray icon is not always updated correctly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-25 14:51 UTC by Ralf Jung
Modified: 2024-12-23 18:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A screenshot demonstrating the issue (51.07 KB, image/png)
2014-03-25 14:51 UTC, Ralf Jung
Details
Screenshot of the freshly bootet desktop (313.14 KB, image/png)
2014-04-03 11:09 UTC, Ralf Jung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2014-03-25 14:51:12 UTC
Occasionally, when I leave/join a wireless network or disable/enable the radio via the killswitch, plasna-nm does not update the tray icon correctly.

Reproducible: Sometimes

Steps to Reproduce:
1. Disconnect from the wireless network you are connected to
2. Reconnect

Actual Results:  
Sometimes, the icon in the systray is not updated correctly. The status indicator in the "expanded" applet still shows "Connected" though, and NM-aware applications correctly consider the network available.

Expected Results:  
The icon should always visualize the current connection state.

I will attach a screenshot demonstrating the issue.
Comment 1 Ralf Jung 2014-03-25 14:51:53 UTC
Created attachment 85735 [details]
A screenshot demonstrating the issue

You can see an active wireless connection and the green "Connected" indicator - but the tray icon says the wireless is disconnected.
Comment 2 Jan Grulich 2014-03-25 14:55:06 UTC
Can you try to update to 0.9.3.3? What version of NetworkManager do you have?
Comment 3 Ralf Jung 2014-03-25 14:58:06 UTC
Wow, that was a fast reaction :)

It seems 0.9.3.3 was uploaded to Debian experimental, so I will install it later today and see if the issue comes back. Of course, I only see it happen once a week or so, so it will be hard to tell.

I am using NetworkManager 0.9.8.0.
Comment 4 Jan Grulich 2014-03-25 15:02:13 UTC
Oh, 0.9.8.0 is really old, I strongly recommend to update to 0.9.8.8, which is also in Debian experimental repositories, it is also necessary for plasma-nm 0.9.3.3.
Comment 5 Ralf Jung 2014-03-25 15:35:53 UTC
And so I did upgrade the two of them... now my wireless is completely broken. plasma-nm displays the networks, but fails to recognize even those listed in /etc/NetworkManager/system-connections (syslog says NM found them, but plasma-nm does not seem to care), and it fails to connect or even react to entering the password. I had to go down to the basement to get wired internet access. I am not sure though whether it's NetworkManager's fault though or plasma-nm or something else... the only error in the logfile is for ModemManager being unable to start (which was updated as well, it seems), but fixing that doesn't help. So for now I'll downgrade everything again and wait till they get this stuff working at all.

There's also no dependency from the plasma-nm 0.9.3.3 package to a network-manager >= 0.9.8.8, it just requires 0.9.8, I assume that's a bug?
Comment 6 Jan Grulich 2014-03-25 15:46:38 UTC
Try to update also modemmanagerqt and networkmanagerqt, because these are required for this version. Also after NetworkManager update, you have to restart your computer, or at least restart everything.
Comment 7 Ralf Jung 2014-03-25 15:57:53 UTC
The new versions (actually, new SONAMES) of modemmanagerqt and networkmanagerqt were automatically pulled in, and I did a full reboot - didn't help.
Comment 8 Ralf Jung 2014-03-30 10:46:28 UTC
plasma-nm 0.9.3.3 was recently uploaded to unstable, so I installed it for further testing.
Now the icon looks wrong all the time - whenever I am connected to a wireless network, it shows the wireless icon together with a question mark. I am not sure what this means, the tooltip doesn't explain the question mark.

I am still using networkmanager 0.9.8.0, after my experiences with the newer version last week - and because the Debian plasma-nm 0.9.3.3 does not depend on a newer network-manager.
Comment 9 Jan Grulich 2014-03-30 11:18:01 UTC
You definitely need newer version of NetworkManager, because we use properties introduced in NM 0.9.8.4, which is the reason why it doesn't work for you.
Comment 10 Volker Christian 2014-03-31 10:48:24 UTC
After a suspend/resume cycle the plasma widget didn't show any network-connections anymore!
I have installed plasma-nm (0.9.3.3-2) and network-manager (0.9.8.8-4) both from debian unstable.
Comment 11 Ralf Jung 2014-03-31 10:59:02 UTC
I now switched my machine to systemd, which fixed NM 0.9.8.8 (in Debian unstable now) and the question mark in plasma-nm went away. So far, the issue originally described in this bug did not appear again. Jan, feel free to close it, I will re-open the bug if I see it happen again.

(In reply to comment #10)
> After a suspend/resume cycle the plasma widget didn't show any
> network-connections anymore!
> I have installed plasma-nm (0.9.3.3-2) and network-manager (0.9.8.8-4) both
> from debian unstable.

The NM in Debian unstable only works when systemd is used. See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=743128 . That's totally unrelated to this bug, though admittedly it's exactly the symptom I described in #5 .
Comment 12 Ralf Jung 2014-04-03 11:09:10 UTC
Created attachment 85931 [details]
Screenshot of the freshly bootet desktop

Not sure if that's related, but the icon Plasma-NM shows immediately after startup, while waiting for the user to enter the password, is misleading: It shows an established connection, even without that spinning icon. I would have expected the spinning icon and the question mark, which is what I usually get while the connection is being established.
Comment 13 Jan Grulich 2014-04-22 09:20:52 UTC
Git commit 0226a243f0f6ee15ae87674c8711cc7f5dace2d3 by Jan Grulich.
Committed on 22/04/2014 at 09:20.
Pushed by grulich into branch '0.9.3'.

Display spinner after startup when connection is activating

M  +3    -6    libs/declarative/connectionicon.cpp

http://commits.kde.org/plasma-nm/0226a243f0f6ee15ae87674c8711cc7f5dace2d3
Comment 14 Jan Grulich 2014-04-22 09:37:24 UTC
Git commit 8b0ebf8500390a8bd3e0f84456781f83aebdb309 by Jan Grulich.
Committed on 22/04/2014 at 09:20.
Pushed by grulich into branch 'frameworks'.

Display spinner after startup when connection is activating

M  +3    -6    libs/declarative/connectionicon.cpp

http://commits.kde.org/plasma-nm/8b0ebf8500390a8bd3e0f84456781f83aebdb309
Comment 15 Ben Cooksley 2024-12-23 18:25:54 UTC
Bulk transfer as requested in T17796