Display spinner after startup when connection is activating

BUG:332590